[gd_scene load_steps=6 format=3 uid="uid://dfgenrnfwwtas"]

[ext_resource type="Script" uid="uid://dhlajl531rfo2" path="res://Transition.gd" id="1_ws5yv"]

[sub_resource type="Animation" id="Animation_usw1v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/ColorRect/DayText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ty071"]
resource_name = "fadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/ColorRect/DayText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2lnok"]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/ColorRect/DayText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5y4s4"]
_data = {
&"RESET": SubResource("Animation_usw1v"),
&"fadeIn": SubResource("Animation_ty071"),
&"fadeOut": SubResource("Animation_2lnok")
}

[node name="Transition" type="Node"]
script = ExtResource("1_ws5yv")

[node name="UI" type="CanvasLayer" parent="."]

[node name="DialogBox" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -198.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="UI/DialogBox"]
layout_mode = 2
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\""
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="DayText" type="Control" parent="UI/ColorRect"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DawnOf" type="Label" parent="UI/ColorRect/DayText"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 370.5
offset_top = 148.0
offset_right = 741.5
offset_bottom = 272.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 90
text = "Dawn of"

[node name="Today" type="Label" parent="UI/ColorRect/DayText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = 221.5
offset_right = 932.0
offset_bottom = 386.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "The First Day"

[node name="DaysRemain" type="Label" parent="UI/ColorRect/DayText"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 304.0
offset_top = 352.0
offset_right = 808.0
offset_bottom = 445.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
text = "-Six days remain-"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5y4s4")
}
autoplay = "RESET"
